# swiftsim-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/swiftsim-utils/: __init__.py  cli.py
src/swiftsim_cli/: __init__.py  cli.py  cosmology.py  multi_mode_args.py  params.py  profile.py  src_parser.py  swiftsim_dir.py  utilities.py
src/swiftsim_cli/modes/: __init__.py  analyse.py  config.py  make.py  new.py  output_times.py  profile.py  show.py  switch.py  update.py
src/swiftsim_cli/modes/analyse/: __init__.py  gravity_checks.py  gravity_error_maps.py  log_task_counts.py  log_timing.py  timer_classification.py  timesteps.py
src/swiftsim_utils/: __init__.py  _version.py  analyse.py  cli.py  cmd_args.py  config.py  cosmology.py  multi_mode_args.py  new.py  output_list.py  params.py  profile.py  swiftsim_dir.py  utilities.py
src/swiftsim_utils/modes/: __init__.py  analyse.py  config.py  init.py  new.py  profile.py  switch.py
tests/: README.md  __init__.py  conftest.py
tests/data/: test_log.txt
tests/unit/: __init__.py  test_analyse_classification.py  test_analyse_init.py  test_cli.py  test_config.py  test_cosmology.py  test_log_task_counts.py  test_log_timing.py  test_make.py  test_modes_new.py  test_modes_profile.py  test_multi_mode_args_real.py  test_output_times.py  test_output_times_run.py  test_params.py  test_profile.py  test_show.py  test_src_parser.py  test_swiftsim_dir.py  test_switch.py  test_update.py  test_utilities.py
